--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -570,7 +570,7 @@ section {
 
 @media (min-width: 57.6rem) {
   section {
-    width: calc(100% - 7rem);
+    width: 100%;
     padding-top: 11vh;
     padding-bottom: 11vh;
     padding-left: 3rem;
@@ -950,6 +950,10 @@ h4 {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .inline {
   display: inline;
 }
@@ -1112,6 +1116,10 @@ h4 {
           user-select: none;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1126,6 +1134,10 @@ h4 {
 
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1499,10 +1511,6 @@ h4 {
   text-align: end;
 }
 
-.text-xl {
-  font-size: 4.4rem;
-}
-
 .text-xs {
   font-size: 1.2rem;
 }
@@ -1533,6 +1541,10 @@ h4 {
 
 .text-\[2\.4rem\] {
   font-size: 2.4rem;
+}
+
+.text-xl {
+  font-size: 4.4rem;
 }
 
 .text-\[2rem\] {
@@ -1581,10 +1593,6 @@ h4 {
 
 .tracking-widest {
   letter-spacing: 0.1em;
-}
-
-.tracking-wider {
-  letter-spacing: 0.05em;
 }
 
 .tracking-\[\.6rem\] {
@@ -1741,6 +1749,22 @@ main {
   box-shadow: 0 0 0 3px #a1dcf0 !important;
 }
 
+.shadow-right {
+  text-shadow: 5px 3px 0px rgb(18, 37, 43),
+        8px 4px 0px rgba(255, 255, 255, 0.15);
+}
+
+.shadow-left {
+  text-shadow: -5px 3px 0px rgb(18, 37, 43),
+        -8px 4px 0px rgba(255, 255, 255, 0.15);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  #main {
+    transition: none;
+  }
+}
+
 .placeholder\:font-light::-moz-placeholder {
   font-weight: 300;
 }
@@ -1776,7 +1800,7 @@ main {
 
 .before\:bg-hero-image-light::before {
   content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(239, 239, 239) 99%), url('https://images.unsplash.com/photo-1528722828814-77b9b83aafb2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(239, 239, 239) 99%), url('./src/assets/hero/heroBg.jpg');
 }
 
 .before\:bg-cover::before {
@@ -1801,14 +1825,19 @@ main {
   cursor: pointer;
 }
 
-.hover\:bg-offWhite:hover {
+.hover\:bg-offBlack:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+  background-color: rgb(56 75 82 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(126 174 205 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-offWhite:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue:hover {
@@ -1942,7 +1971,7 @@ main {
 
 .dark .dark\:before\:bg-hero-image-dark::before {
   content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .7), rgb(18, 37, 43) 90%), url('https://images.unsplash.com/photo-1528722828814-77b9b83aafb2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .7), rgb(18, 37, 43) 90%), url('./src/assets/hero/heroBg.jpg');
 }
 
 .dark .dark\:hover\:bg-offBlack:hover {
@@ -1977,6 +2006,11 @@ main {
   .tablet\:my-12 {
     margin-top: 3rem;
     margin-bottom: 3rem;
+  }
+
+  .tablet\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .tablet\:mt-\[5rem\] {
@@ -2055,6 +2089,10 @@ main {
     width: 37rem;
   }
 
+  .tablet\:w-3\/4 {
+    width: 75%;
+  }
+
   .tablet\:w-\[3\.5rem\] {
     width: 3.5rem;
   }
@@ -2085,10 +2123,6 @@ main {
 
   .tablet\:gap-\[2rem\] {
     gap: 2rem;
-  }
-
-  .tablet\:gap-28 {
-    gap: 7rem;
   }
 
   .tablet\:gap-3 {
@@ -2164,6 +2198,10 @@ main {
 @media (min-width: 87.5rem) {
   .desktop\:mt-20 {
     margin-top: 5rem;
+  }
+
+  .desktop\:w-full {
+    width: 100%;
   }
 
   .desktop\:auto-cols-auto {
@@ -2247,8 +2285,8 @@ main {
     height: 50%;
   }
 
-  .landscape\:w-\[rem\] {
-    width: rem;
+  .landscape\:w-\[7rem\] {
+    width: 7rem;
   }
 
   .landscape\:w-\[10rem\] {
