--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -864,6 +864,10 @@ h4 {
   left: 200%;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -934,6 +938,10 @@ h4 {
   margin-bottom: 2rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -948,14 +956,6 @@ h4 {
 
 .block {
   display: block;
-}
-
-.inline-block {
-  display: inline-block;
-}
-
-.inline {
-  display: inline;
 }
 
 .flex {
@@ -993,6 +993,10 @@ h4 {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[calc\(100vh-5rem\)\] {
+  height: calc(100vh - 5rem);
 }
 
 .h-1\/3 {
@@ -1089,6 +1093,14 @@ h4 {
   width: 8.7rem;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .max-w-\[120rem\] {
   max-width: 120rem;
 }
@@ -1099,6 +1111,16 @@ h4 {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1\/2 {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-1\/4 {
+  --tw-translate-x: 25%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1667,6 +1689,14 @@ h4 {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1725,6 +1755,10 @@ main {
   border-radius: 0.4rem;
   padding: 0.25rem 0.5rem;
   z-index: 1;
+  -webkit-border-radius: 0.4rem;
+  -moz-border-radius: 0.4rem;
+  -ms-border-radius: 0.4rem;
+  -o-border-radius: 0.4rem;
 }
 
 .tooltip:hover::after {
@@ -1749,20 +1783,20 @@ main {
   box-shadow: 0 0 0 3px #a1dcf0 !important;
 }
 
-.shadow-right {
-  text-shadow: 5px 3px 0px rgb(18, 37, 43),
-        8px 4px 0px rgba(255, 255, 255, 0.15);
+.shadow-right-dark {
+  text-shadow: 3px 2px 0px rgba(255, 255, 255, 0.85), 6px 3px 0px #384b52;
 }
 
-.shadow-left {
-  text-shadow: -5px 3px 0px rgb(18, 37, 43),
-        -8px 4px 0px rgba(255, 255, 255, 0.15);
+.shadow-left-dark {
+  text-shadow: -3px 2px 0px rgba(255, 255, 255, 0.85), -6px 3px 0px #384b52;
 }
 
-@media (prefers-reduced-motion: reduce) {
-  #main {
-    transition: none;
-  }
+.shadow-right-light {
+  text-shadow: 5px 3px 0px #efefef, 8px 4px 0px rgba(255, 255, 255, 0.15);
+}
+
+.shadow-left-light {
+  text-shadow: -5px 3px 0px #efefef, -8px 4px 0px rgba(255, 255, 255, 0.15);
 }
 
 .placeholder\:font-light::-moz-placeholder {
@@ -1869,12 +1903,6 @@ main {
 
 .active\:opacity-100:active {
   opacity: 1;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .motion-reduce\:transition-none {
-    transition-property: none;
-  }
 }
 
 .dark .dark\:border {
@@ -1994,6 +2022,11 @@ main {
   color: rgb(126 174 205 / var(--tw-text-opacity));
 }
 
+.dark .dark\:hover\:text-lightBlue:hover {
+  --tw-text-opacity: 1;
+  color: rgb(161 220 240 / var(--tw-text-opacity));
+}
+
 .dark .dark\:focus\:outline-lightBlue:focus {
   outline-color: #a1dcf0;
 }
@@ -2085,6 +2118,10 @@ main {
     width: 80rem;
   }
 
+  .tablet\:w-\[25rem\] {
+    width: 25rem;
+  }
+
   .tablet\:w-\[37rem\] {
     width: 37rem;
   }
@@ -2099,6 +2136,10 @@ main {
 
   .tablet\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .tablet\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .tablet\:grid-cols-11 {
@@ -2246,6 +2287,10 @@ main {
   .portrait\:mb-12 {
     margin-bottom: 3rem;
   }
+
+  .portrait\:h-\[calc\(100vh-5rem\)\] {
+    height: calc(100vh - 5rem);
+  }
 }
 
 @media (min-width: 57.6rem) {
@@ -2279,6 +2324,10 @@ main {
 
   .landscape\:h-full {
     height: 100%;
+  }
+
+  .landscape\:h-screen {
+    height: 100vh;
   }
 
   .landscape\:h-1\/2 {
