--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -631,23 +631,61 @@ section {
   }
 }
 
-.btn__light--blue {
-  background-image: none;
-  --tw-shadow: 4px 4px 0 0 rgba(0,0,0,1);
-  --tw-shadow-colored: 4px 4px 0 0 var(--tw-shadow-color);
+.btn__primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn__primary:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-shadow: 0 0 5px 3px rgba(56,75,82,.4);
+  --tw-shadow-colored: 0 0 5px 3px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.btn__light--blue:hover {
+.dark .btn__primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
-}
-
-.dark .btn__light--blue {
+  background-color: rgb(56 75 82 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(239 239 239 / var(--tw-text-opacity));
-  --tw-shadow: 4px 4px 0 0 rgba(255,255,255,1);
-  --tw-shadow-colored: 4px 4px 0 0 var(--tw-shadow-color);
+}
+
+.dark .btn__primary:hover {
+  --tw-shadow: 0 0 5px 3px rgba(254,254,254,.4);
+  --tw-shadow-colored: 0 0 5px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.btn__secondary {
+  background-image: none;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn__secondary:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-shadow: 0 0 5px 3px rgba(56,75,82,.4);
+  --tw-shadow-colored: 0 0 5px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark .btn__secondary {
+  background-image: none;
+  --tw-text-opacity: 1;
+  color: rgb(239 239 239 / var(--tw-text-opacity));
+}
+
+.dark .btn__secondary:hover {
+  --tw-shadow: 0 0 5px 3px rgba(254,254,254,.4);
+  --tw-shadow-colored: 0 0 5px 3px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -703,7 +741,6 @@ section {
 
 .headings--h2 {
   margin-bottom: 2rem;
-  font-size: 4.4rem;
   font-weight: 700;
   line-height: 4rem;
   --tw-text-opacity: 1;
@@ -727,18 +764,19 @@ section {
   }
 }
 
-.headings__left--h5 {
+.headings__left--h2 {
   position: relative;
+  margin-bottom: 2rem;
   padding-left: 2.6rem;
-  font-weight: 500;
+  font-weight: 700;
   text-transform: uppercase;
-  line-height: 2.4rem;
+  line-height: 4rem;
   letter-spacing: .75rem;
   --tw-text-opacity: 1;
   color: rgb(56 75 82 / var(--tw-text-opacity));
 }
 
-.headings__left--h5::before {
+.headings__left--h2::before {
   position: absolute;
   bottom: 50%;
   left: 0px;
@@ -752,29 +790,36 @@ section {
   content: var(--tw-content);
 }
 
-.dark .headings__left--h5 {
+.dark .headings__left--h2 {
   --tw-text-opacity: 1;
-  color: rgb(126 174 205 / var(--tw-text-opacity));
+  color: rgb(249 249 249 / var(--tw-text-opacity));
 }
 
-.dark .headings__left--h5::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+@media (min-width: 57.6rem) {
+  .headings__left--h2 {
+    margin-bottom: 0px;
+  }
 }
 
-.headings__right--h5 {
+@media (orientation: landscape) {
+  .headings__left--h2 {
+    line-height: 6.6rem;
+  }
+}
+
+.headings__right--h2 {
   position: relative;
+  margin-bottom: 2rem;
   padding-right: 2.6rem;
-  font-weight: 500;
+  font-weight: 700;
   text-transform: uppercase;
-  line-height: 2.4rem;
+  line-height: 4rem;
   letter-spacing: .75rem;
   --tw-text-opacity: 1;
   color: rgb(56 75 82 / var(--tw-text-opacity));
 }
 
-.headings__right--h5::after {
+.headings__right--h2::after {
   position: absolute;
   bottom: 50%;
   right: 0px;
@@ -788,15 +833,21 @@ section {
   content: var(--tw-content);
 }
 
-.dark .headings__right--h5 {
+.dark .headings__right--h2 {
   --tw-text-opacity: 1;
-  color: rgb(126 174 205 / var(--tw-text-opacity));
+  color: rgb(249 249 249 / var(--tw-text-opacity));
 }
 
-.dark .headings__right--h5::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+@media (min-width: 57.6rem) {
+  .headings__right--h2 {
+    margin-bottom: 0px;
+  }
+}
+
+@media (orientation: landscape) {
+  .headings__right--h2 {
+    line-height: 6.6rem;
+  }
 }
 
 .sun {
@@ -894,10 +945,6 @@ h4 {
 
 .row-span-2 {
   grid-row: span 2 / span 2;
-}
-
-.row-span-1 {
-  grid-row: span 1 / span 1;
 }
 
 .m-auto {
@@ -1381,6 +1428,10 @@ h4 {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-none {
+  background-image: none;
+}
+
 .from-cardBG {
   --tw-gradient-from: rgba(18, 37, 43, 0.9);
   --tw-gradient-to: rgb(18 37 43 / 0);
@@ -1557,16 +1608,16 @@ h4 {
   font-size: 1rem;
 }
 
+.text-md {
+  font-size: 2.2rem;
+}
+
 .text-base {
   font-size: 1.6rem;
 }
 
 .text-icons {
   font-size: 3.5rem;
-}
-
-.text-md {
-  font-size: 2.2rem;
 }
 
 .text-\[2\.4rem\] {
@@ -1868,14 +1919,14 @@ main {
   background-color: rgb(56 75 82 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-offWhite:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue:hover {
@@ -2009,6 +2060,11 @@ main {
 .dark .dark\:hover\:bg-offBlack:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(56 75 82 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-blue:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
 }
 
 .dark .hover\:dark\:text-blue:hover {
@@ -2377,8 +2433,8 @@ main {
     justify-content: space-between;
   }
 
-  .landscape\:self-end {
-    align-self: flex-end;
+  .landscape\:self-center {
+    align-self: center;
   }
 
   .landscape\:py-10 {
