--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -915,6 +915,18 @@ h4 {
   left: 200%;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
+.top-1\/4 {
+  top: 25%;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -951,14 +963,14 @@ h4 {
   margin: auto;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .ml-\[\.5rem\] {
@@ -967,6 +979,10 @@ h4 {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .ml-2 {
@@ -993,12 +1009,20 @@ h4 {
   margin-bottom: 1.25rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-\[5rem\] {
+  margin-bottom: 5rem;
 }
 
 .block {
@@ -1015,6 +1039,10 @@ h4 {
 
 .hidden {
   display: none;
+}
+
+.aspect-auto {
+  aspect-ratio: auto;
 }
 
 .h-screen {
@@ -1152,6 +1180,10 @@ h4 {
   width: 8.7rem;
 }
 
+.w-2\/12 {
+  width: 16.666667%;
+}
+
 .max-w-\[120rem\] {
   max-width: 120rem;
 }
@@ -1206,14 +1238,6 @@ h4 {
 
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-4 {
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1391,6 +1415,11 @@ h4 {
   border-color: #384b52a2;
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 249 249 / var(--tw-border-opacity));
+}
+
 .bg-offWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
@@ -1430,6 +1459,11 @@ h4 {
 .bg-lightBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(161 220 240 / var(--tw-bg-opacity));
+}
+
+.bg-offBlack {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 75 82 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1542,6 +1576,46 @@ h4 {
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-48 {
+  padding-top: 12rem;
+  padding-bottom: 12rem;
+}
+
+.py-96 {
+  padding-top: 24rem;
+  padding-bottom: 24rem;
+}
+
+.py-80 {
+  padding-top: 20rem;
+  padding-bottom: 20rem;
+}
+
+.py-52 {
+  padding-top: 13rem;
+  padding-bottom: 13rem;
+}
+
+.py-60 {
+  padding-top: 15rem;
+  padding-bottom: 15rem;
+}
+
+.py-44 {
+  padding-top: 11rem;
+  padding-bottom: 11rem;
+}
+
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .pb-\[2\.6rem\] {
@@ -1792,6 +1866,10 @@ main {
   scroll-behavior: smooth;
 }
 
+img {
+  aspect-ratio: auto;
+}
+
 .navbar__links a:hover {
   cursor: pointer;
 }
@@ -1985,6 +2063,11 @@ main {
   border-color: #a1dcf0a2;
 }
 
+.dark .dark\:border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(18 37 43 / var(--tw-border-opacity));
+}
+
 .dark .dark\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(18 37 43 / var(--tw-bg-opacity));
@@ -2106,6 +2189,10 @@ main {
 
   .tablet\:mt-\[5rem\] {
     margin-top: 5rem;
+  }
+
+  .tablet\:mt-40 {
+    margin-top: 10rem;
   }
 
   .tablet\:mt-10 {
