--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -891,6 +891,10 @@ h4 {
   position: relative;
 }
 
+.top-1\/3 {
+  top: 33.333333%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -913,18 +917,6 @@ h4 {
 
 .left-\[200\%\] {
   left: 200%;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.top-1\/4 {
-  top: 25%;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
 }
 
 .z-10 {
@@ -968,11 +960,6 @@ h4 {
   margin-right: auto;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .ml-\[\.5rem\] {
   margin-left: .5rem;
 }
@@ -987,6 +974,10 @@ h4 {
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mb-\[5rem\] {
+  margin-bottom: 5rem;
 }
 
 .mt-10 {
@@ -1013,18 +1004,6 @@ h4 {
   margin-bottom: 0.75rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-\[5rem\] {
-  margin-bottom: 5rem;
-}
-
 .block {
   display: block;
 }
@@ -1043,6 +1022,14 @@ h4 {
 
 .aspect-auto {
   aspect-ratio: auto;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
+.aspect-video {
+  aspect-ratio: 16 / 9;
 }
 
 .h-screen {
@@ -1114,6 +1101,10 @@ h4 {
   height: 5rem;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
@@ -1123,8 +1114,8 @@ h4 {
   width: 100%;
 }
 
-.w-3\/12 {
-  width: 25%;
+.w-2\/12 {
+  width: 16.666667%;
 }
 
 .w-fit {
@@ -1178,10 +1169,6 @@ h4 {
 
 .w-\[8\.7rem\] {
   width: 8.7rem;
-}
-
-.w-2\/12 {
-  width: 16.666667%;
 }
 
 .max-w-\[120rem\] {
@@ -1242,10 +1229,6 @@ h4 {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .place-items-center {
@@ -1415,11 +1398,6 @@ h4 {
   border-color: #384b52a2;
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(249 249 249 / var(--tw-border-opacity));
-}
-
 .bg-offWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
@@ -1430,14 +1408,14 @@ h4 {
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
 }
 
-.bg-blue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(18 37 43 / var(--tw-bg-opacity));
+}
+
+.bg-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
 }
 
 .bg-\[rgb\(56\2c 75\2c 82\2c \.1\)\] {
@@ -1459,11 +1437,6 @@ h4 {
 .bg-lightBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(161 220 240 / var(--tw-bg-opacity));
-}
-
-.bg-offBlack {
-  --tw-bg-opacity: 1;
-  background-color: rgb(56 75 82 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1498,9 +1471,9 @@ h4 {
   padding-right: 3rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .px-10 {
@@ -1521,6 +1494,11 @@ h4 {
 .px-\[\.3rem\] {
   padding-left: .3rem;
   padding-right: .3rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .py-\[1\.2rem\] {
@@ -1576,46 +1554,6 @@ h4 {
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-48 {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
-}
-
-.py-96 {
-  padding-top: 24rem;
-  padding-bottom: 24rem;
-}
-
-.py-80 {
-  padding-top: 20rem;
-  padding-bottom: 20rem;
-}
-
-.py-52 {
-  padding-top: 13rem;
-  padding-bottom: 13rem;
-}
-
-.py-60 {
-  padding-top: 15rem;
-  padding-bottom: 15rem;
-}
-
-.py-44 {
-  padding-top: 11rem;
-  padding-bottom: 11rem;
-}
-
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
 }
 
 .pb-\[2\.6rem\] {
@@ -1734,6 +1672,10 @@ h4 {
   text-transform: uppercase;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .leading-lg {
   line-height: 2.4rem;
 }
@@ -1776,11 +1718,6 @@ h4 {
   color: rgb(18 37 43 / var(--tw-text-opacity));
 }
 
-.text-blue {
-  --tw-text-opacity: 1;
-  color: rgb(126 174 205 / var(--tw-text-opacity));
-}
-
 .text-lightBlue {
   --tw-text-opacity: 1;
   color: rgb(161 220 240 / var(--tw-text-opacity));
@@ -1794,6 +1731,11 @@ h4 {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
+}
+
+.text-blue {
+  --tw-text-opacity: 1;
+  color: rgb(126 174 205 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1860,14 +1802,10 @@ body .dark {
 }
 
 main {
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
   scroll-behavior: smooth;
-}
-
-img {
-  aspect-ratio: auto;
 }
 
 .navbar__links a:hover {
@@ -2000,11 +1938,6 @@ img {
   cursor: pointer;
 }
 
-.hover\:bg-offBlack:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(56 75 82 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-offWhite:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
@@ -2050,22 +1983,17 @@ img {
   border-width: 1px;
 }
 
+.dark .dark\:border-\[rgba\(150\2c 150\2c 150\2c 0\.6\)\] {
+  border-color: rgba(150,150,150,0.6);
+}
+
 .dark .dark\:border-offWhite {
   --tw-border-opacity: 1;
   border-color: rgb(239 239 239 / var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[rgba\(150\2c 150\2c 150\2c 0\.6\)\] {
-  border-color: rgba(150,150,150,0.6);
-}
-
 .dark .dark\:border-\[\#a1dcf0a2\] {
   border-color: #a1dcf0a2;
-}
-
-.dark .dark\:border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(18 37 43 / var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-black {
@@ -2191,10 +2119,6 @@ img {
     margin-top: 5rem;
   }
 
-  .tablet\:mt-40 {
-    margin-top: 10rem;
-  }
-
   .tablet\:mt-10 {
     margin-top: 2.5rem;
   }
@@ -2207,28 +2131,25 @@ img {
     margin-bottom: 5rem;
   }
 
-  .tablet\:mt-0 {
-    margin-top: 0px;
-  }
-
   .tablet\:flex {
     display: flex;
-  }
-
-  .tablet\:inline-grid {
-    display: inline-grid;
   }
 
   .tablet\:hidden {
     display: none;
   }
 
-  .tablet\:h-screen {
-    height: 100vh;
+  .tablet\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .tablet\:h-3\/5 {
     height: 60%;
+  }
+
+  .tablet\:h-screen {
+    height: 100vh;
   }
 
   .tablet\:h-\[26rem\] {
@@ -2287,10 +2208,6 @@ img {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .tablet\:grid-cols-11 {
-    grid-template-columns: repeat(11, minmax(0, 1fr));
-  }
-
   .tablet\:flex-row {
     flex-direction: row;
   }
@@ -2309,10 +2226,6 @@ img {
 
   .tablet\:gap-\[2rem\] {
     gap: 2rem;
-  }
-
-  .tablet\:gap-3 {
-    gap: 0.75rem;
   }
 
   .tablet\:gap-x-32 {
@@ -2388,10 +2301,6 @@ img {
 
   .desktop\:w-1\/12 {
     width: 8.333333%;
-  }
-
-  .desktop\:w-full {
-    width: 100%;
   }
 
   .desktop\:auto-cols-auto {
