--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -891,8 +891,8 @@ h4 {
   position: relative;
 }
 
-.top-1\/3 {
-  top: 33.333333%;
+.top-1\/4 {
+  top: 25%;
 }
 
 .right-0 {
@@ -1028,10 +1028,6 @@ h4 {
   aspect-ratio: 1 / 1;
 }
 
-.aspect-video {
-  aspect-ratio: 16 / 9;
-}
-
 .h-screen {
   height: 100vh;
 }
@@ -1075,6 +1071,10 @@ h4 {
 
 .h-\[25rem\] {
   height: 25rem;
+}
+
+.h-\[4rem\] {
+  height: 4rem;
 }
 
 .h-5\/6 {
@@ -1153,6 +1153,10 @@ h4 {
 
 .w-\[13rem\] {
   width: 13rem;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-\[40rem\] {
@@ -1476,11 +1480,6 @@ h4 {
   padding-bottom: 10rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1562,18 +1561,6 @@ h4 {
 
 .pt-\[4\.5rem\] {
   padding-top: 4.5rem;
-}
-
-.pt-\[11rem\] {
-  padding-top: 11rem;
-}
-
-.pb-52 {
-  padding-bottom: 13rem;
-}
-
-.pt-\[7\.5rem\] {
-  padding-top: 7.5rem;
 }
 
 .pl-3 {
@@ -1723,14 +1710,14 @@ h4 {
   color: rgb(161 220 240 / var(--tw-text-opacity));
 }
 
-.text-offWhite {
-  --tw-text-opacity: 1;
-  color: rgb(239 239 239 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
+}
+
+.text-offWhite {
+  --tw-text-opacity: 1;
+  color: rgb(239 239 239 / var(--tw-text-opacity));
 }
 
 .text-blue {
@@ -1808,6 +1795,40 @@ main {
   scroll-behavior: smooth;
 }
 
+.navbar__links a {
+  position: relative;
+}
+
+.navbar__links {
+  overflow: visible;
+}
+
+.active::before {
+  content: "";
+  position: absolute;
+  width: 200%;
+  height: 150%;
+  z-index: -1;
+  left: 0.5rem;
+  top: 0;
+  overflow: visible;
+  border-radius: 5rem 0 0 5rem;
+  -webkit-border-radius: 5rem 0 0 5rem;
+  -moz-border-radius: 5rem 0 0 5rem;
+  -ms-border-radius: 5rem 0 0 5rem;
+  -o-border-radius: 5rem 0 0 5rem;
+  transform: translateY(-15%);
+  -webkit-transform: translateY(-15%);
+  -moz-transform: translateY(-15%);
+  -ms-transform: translateY(-15%);
+  -o-transform: translateY(-15%);
+  transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+}
+
 .navbar__links a:hover {
   cursor: pointer;
 }
@@ -1862,22 +1883,6 @@ main {
   box-shadow: 0 0 0 3px #a1dcf0 !important;
 }
 
-.shadow-right-dark {
-  text-shadow: 3px 2px 0px rgba(255, 255, 255, 0.85), 6px 3px 0px #384b52;
-}
-
-.shadow-left-dark {
-  text-shadow: -3px 2px 0px rgba(255, 255, 255, 0.85), -6px 3px 0px #384b52;
-}
-
-.shadow-right-light {
-  text-shadow: 5px 3px 0px #efefef, 8px 4px 0px rgba(255, 255, 255, 0.15);
-}
-
-.shadow-left-light {
-  text-shadow: -5px 3px 0px #efefef, -8px 4px 0px rgba(255, 255, 255, 0.15);
-}
-
 .placeholder\:font-light::-moz-placeholder {
   font-weight: 300;
 }
@@ -1911,9 +1916,15 @@ main {
   overflow: hidden;
 }
 
+.before\:bg-offWhite::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
+}
+
 .before\:bg-hero-image-light::before {
   content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(239, 239, 239) 99%), url('./src/assets/hero/heroBg.png');
+  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(239, 239, 239) 99%), url('./src/assets/hero/heroBg.webp');
 }
 
 .before\:bg-cover::before {
@@ -1948,19 +1959,14 @@ main {
   background-color: rgb(126 174 205 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue:hover {
-  --tw-text-opacity: 1;
-  color: rgb(126 174 205 / var(--tw-text-opacity));
-}
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
 }
 
-.hover\:text-lightBlue:hover {
+.hover\:text-blue:hover {
   --tw-text-opacity: 1;
-  color: rgb(161 220 240 / var(--tw-text-opacity));
+  color: rgb(126 174 205 / var(--tw-text-opacity));
 }
 
 .hover\:overline:hover {
@@ -2071,6 +2077,12 @@ main {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.dark .dark\:before\:bg-black::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 37 43 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:before\:bg-hero-image-dark::before {
   content: var(--tw-content);
   background-image: linear-gradient(to bottom, rgba(56, 75, 82, .7), rgb(18, 37, 43) 90%), url('./src/assets/hero/heroBg.webp');
@@ -2081,19 +2093,19 @@ main {
   background-color: rgb(56 75 82 / var(--tw-bg-opacity));
 }
 
-.dark .hover\:dark\:text-blue:hover {
-  --tw-text-opacity: 1;
-  color: rgb(126 174 205 / var(--tw-text-opacity));
-}
-
 .dark .hover\:dark\:text-offBlack:hover {
   --tw-text-opacity: 1;
   color: rgb(56 75 82 / var(--tw-text-opacity));
 }
 
-.dark .dark\:hover\:text-lightBlue:hover {
+.dark .dark\:hover\:text-blue:hover {
   --tw-text-opacity: 1;
-  color: rgb(161 220 240 / var(--tw-text-opacity));
+  color: rgb(126 174 205 / var(--tw-text-opacity));
+}
+
+.dark .hover\:dark\:text-blue:hover {
+  --tw-text-opacity: 1;
+  color: rgb(126 174 205 / var(--tw-text-opacity));
 }
 
 .dark .dark\:focus\:outline-lightBlue:focus {
@@ -2220,10 +2232,6 @@ main {
     align-items: center;
   }
 
-  .tablet\:gap-0 {
-    gap: 0px;
-  }
-
   .tablet\:gap-\[2rem\] {
     gap: 2rem;
   }
@@ -2247,11 +2255,6 @@ main {
 
   .tablet\:border-t-0 {
     border-top-width: 0px;
-  }
-
-  .tablet\:px-\[10rem\] {
-    padding-left: 10rem;
-    padding-right: 10rem;
   }
 
   .tablet\:py-10 {
@@ -2384,12 +2387,12 @@ main {
     display: flex;
   }
 
-  .landscape\:h-full {
-    height: 100%;
-  }
-
   .landscape\:h-screen {
     height: 100vh;
+  }
+
+  .landscape\:h-full {
+    height: 100%;
   }
 
   .landscape\:h-1\/2 {
@@ -2422,10 +2425,6 @@ main {
 
   .landscape\:items-center {
     align-items: center;
-  }
-
-  .landscape\:justify-center {
-    justify-content: center;
   }
 
   .landscape\:justify-between {
@@ -2461,24 +2460,12 @@ main {
 
 @media (min-width: 57.6rem) {
   @media (orientation: landscape) {
-    .tablet\:landscape\:h-screen {
-      height: 100vh;
-    }
-
     .tablet\:landscape\:w-\[12rem\] {
       width: 12rem;
     }
 
     .tablet\:landscape\:w-\[37rem\] {
       width: 37rem;
-    }
-  }
-}
-
-@media (orientation: landscape) {
-  @media (min-width: 57.6rem) {
-    .landscape\:tablet\:pt-\[8vh\] {
-      padding-top: 8vh;
     }
   }
 }
