--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -895,20 +895,24 @@ h4 {
   top: 25%;
 }
 
-.right-0 {
-  right: 0px;
-}
-
 .top-0 {
   top: 0px;
 }
 
-.-bottom-20 {
-  bottom: -5rem;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-bottom-20 {
+  bottom: -5rem;
 }
 
 .left-\[3\.5rem\] {
@@ -966,10 +970,6 @@ h4 {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .ml-2 {
@@ -1065,8 +1065,12 @@ h4 {
   height: calc(100vh - 5rem);
 }
 
-.h-1\/3 {
-  height: 33.333333%;
+.h-\[7rem\] {
+  height: 7rem;
+}
+
+.h-\[2\.5rem\] {
+  height: 2.5rem;
 }
 
 .h-\[25rem\] {
@@ -1089,16 +1093,12 @@ h4 {
   height: calc(100% - 15%);
 }
 
-.h-\[2\.5rem\] {
-  height: 2.5rem;
-}
-
-.h-\[7rem\] {
-  height: 7rem;
-}
-
 .h-\[5rem\] {
   height: 5rem;
+}
+
+.h-iOS {
+  height: 100dvh;
 }
 
 .min-h-full {
@@ -1139,8 +1139,12 @@ h4 {
   width: 5rem;
 }
 
-.w-\[13rem\] {
-  width: 13rem;
+.w-\[calc\(100\%\+1\.3px\)\] {
+  width: calc(100% + 1.3px);
+}
+
+.w-\[14rem\] {
+  width: 14rem;
 }
 
 .w-\[12rem\] {
@@ -1155,20 +1159,32 @@ h4 {
   width: 25rem;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-\[40rem\] {
-  width: 40rem;
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-\[2\.5rem\] {
   width: 2.5rem;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-\[13rem\] {
+  width: 13rem;
+}
+
+.w-\[40rem\] {
+  width: 40rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-\[3rem\] {
+  width: 3rem;
+}
+
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-\[8\.7rem\] {
@@ -1183,6 +1199,10 @@ h4 {
   max-width: 25rem;
 }
 
+.max-w-\[45rem\] {
+  max-width: 45rem;
+}
+
 .translate-x-1\/4 {
   --tw-translate-x: 25%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1190,6 +1210,11 @@ h4 {
 
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1273,6 +1298,10 @@ h4 {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-5 {
@@ -1461,6 +1490,14 @@ h4 {
   --tw-gradient-to: rgba(18, 37, 43, 0.9);
 }
 
+.fill-black {
+  fill: #12252b;
+}
+
+.fill-offWhite {
+  fill: #efefef;
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -1540,11 +1577,6 @@ h4 {
   padding-bottom: 0.25rem;
 }
 
-.px-\[5vw\] {
-  padding-left: 5vw;
-  padding-right: 5vw;
-}
-
 .py-\[1\.5vh\] {
   padding-top: 1.5vh;
   padding-bottom: 1.5vh;
@@ -1569,6 +1601,14 @@ h4 {
 
 .pl-\[2rem\] {
   padding-left: 2rem;
+}
+
+.pl-\[5vw\] {
+  padding-left: 5vw;
+}
+
+.pr-\[5vw\] {
+  padding-right: 5vw;
 }
 
 .pt-\[7vh\] {
@@ -1667,6 +1707,10 @@ h4 {
   text-transform: capitalize;
 }
 
+.leading-\[0\] {
+  line-height: 0;
+}
+
 .leading-lg {
   line-height: 2.4rem;
 }
@@ -1709,6 +1753,11 @@ h4 {
   color: rgb(18 37 43 / var(--tw-text-opacity));
 }
 
+.text-offWhite {
+  --tw-text-opacity: 1;
+  color: rgb(239 239 239 / var(--tw-text-opacity));
+}
+
 .text-lightBlue {
   --tw-text-opacity: 1;
   color: rgb(161 220 240 / var(--tw-text-opacity));
@@ -1717,11 +1766,6 @@ h4 {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(249 249 249 / var(--tw-text-opacity));
-}
-
-.text-offWhite {
-  --tw-text-opacity: 1;
-  color: rgb(239 239 239 / var(--tw-text-opacity));
 }
 
 .text-blue {
@@ -1757,14 +1801,6 @@ h4 {
   --tw-shadow: 0 4px 4px 0 rgba(0,0,0,.25);
   --tw-shadow-colored: 0 4px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all {
@@ -1911,6 +1947,10 @@ main {
   box-shadow: 0 0 0 3px #a1dcf0 !important;
 }
 
+.iOSscreen {
+  height: 100dvh;
+}
+
 .placeholder\:font-light::-moz-placeholder {
   font-weight: 300;
 }
@@ -1934,6 +1974,11 @@ main {
   height: 100vh;
 }
 
+.before\:h-iOS::before {
+  content: var(--tw-content);
+  height: 100dvh;
+}
+
 .before\:w-full::before {
   content: var(--tw-content);
   width: 100%;
@@ -1952,7 +1997,7 @@ main {
 
 .before\:bg-hero-image-light::before {
   content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(239, 239, 239) 99%), url('./src/assets/hero/heroBg.webp');
+  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(56, 75, 82) 99%), url('./src/assets/hero/heroBg.webp');
 }
 
 .before\:bg-cover::before {
@@ -2071,11 +2116,6 @@ main {
   color: rgb(126 174 205 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-offWhite {
-  --tw-text-opacity: 1;
-  color: rgb(239 239 239 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-lightBlue {
   --tw-text-opacity: 1;
   color: rgb(161 220 240 / var(--tw-text-opacity));
@@ -2084,6 +2124,11 @@ main {
 .dark .dark\:text-offBlack {
   --tw-text-opacity: 1;
   color: rgb(56 75 82 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-offWhite {
+  --tw-text-opacity: 1;
+  color: rgb(239 239 239 / var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow-\[0_3px_10px_rgba\(255\2c 255\2c 255\2c \.2\)\] {
@@ -2114,11 +2159,6 @@ main {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(18 37 43 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:before\:bg-hero-image-dark::before {
-  content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .7), rgb(18, 37, 43) 90%), url('./src/assets/hero/heroBg.webp');
 }
 
 .dark .dark\:hover\:bg-offBlack:hover {
@@ -2179,17 +2219,20 @@ main {
     display: none;
   }
 
-  .tablet\:h-fit {
-    height: -moz-fit-content;
-    height: fit-content;
+  .tablet\:h-screen {
+    height: 100vh;
   }
 
   .tablet\:h-3\/5 {
     height: 60%;
   }
 
-  .tablet\:h-screen {
-    height: 100vh;
+  .tablet\:h-\[10rem\] {
+    height: 10rem;
+  }
+
+  .tablet\:h-\[3\.5rem\] {
+    height: 3.5rem;
   }
 
   .tablet\:h-\[26rem\] {
@@ -2198,10 +2241,6 @@ main {
 
   .tablet\:h-5\/6 {
     height: 83.333333%;
-  }
-
-  .tablet\:h-\[3\.5rem\] {
-    height: 3.5rem;
   }
 
   .tablet\:w-\[38rem\] {
@@ -2220,20 +2259,8 @@ main {
     width: 50%;
   }
 
-  .tablet\:w-\[19rem\] {
-    width: 19rem;
-  }
-
-  .tablet\:w-\[80rem\] {
-    width: 80rem;
-  }
-
-  .tablet\:w-\[25rem\] {
-    width: 25rem;
-  }
-
-  .tablet\:w-\[37rem\] {
-    width: 37rem;
+  .tablet\:w-\[20rem\] {
+    width: 20rem;
   }
 
   .tablet\:w-3\/4 {
@@ -2242,6 +2269,22 @@ main {
 
   .tablet\:w-\[3\.5rem\] {
     width: 3.5rem;
+  }
+
+  .tablet\:w-\[80rem\] {
+    width: 80rem;
+  }
+
+  .tablet\:w-auto {
+    width: auto;
+  }
+
+  .tablet\:w-\[25rem\] {
+    width: 25rem;
+  }
+
+  .tablet\:w-\[37rem\] {
+    width: 37rem;
   }
 
   .tablet\:grid-cols-2 {
@@ -2338,8 +2381,8 @@ main {
     width: 8.333333%;
   }
 
-  .desktop\:w-\[27rem\] {
-    width: 27rem;
+  .desktop\:w-\[28rem\] {
+    width: 28rem;
   }
 
   .desktop\:auto-cols-auto {
@@ -2354,16 +2397,8 @@ main {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .desktop\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .desktop\:gap-36 {
     gap: 9rem;
-  }
-
-  .desktop\:gap-64 {
-    gap: 16rem;
   }
 
   .desktop\:gap-x-28 {
@@ -2393,8 +2428,16 @@ main {
     margin-bottom: 3rem;
   }
 
-  .portrait\:h-\[calc\(100vh-5rem\)\] {
-    height: calc(100vh - 5rem);
+  .portrait\:h-full {
+    height: 100%;
+  }
+
+  .portrait\:h-iOS {
+    height: 100dvh;
+  }
+
+  .portrait\:h-screen {
+    height: 100vh;
   }
 }
 
