--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -571,8 +571,8 @@ section {
 @media (min-width: 57.6rem) {
   section {
     width: 100%;
-    padding-top: 11vh;
-    padding-bottom: 11vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     padding-left: 3rem;
     padding-right: 3rem;
   }
@@ -587,14 +587,13 @@ section {
 
 @media (orientation: landscape) {
   section {
-    padding-top: 4.5rem;
-    padding-bottom: 4.5rem;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   @media (min-width: 57.6rem) {
     section {
-      padding-top: 11vh;
-      padding-bottom: 11vh;
+      padding-bottom: 10vh;
     }
   }
 }
@@ -726,7 +725,7 @@ section {
 }
 
 .headings--h2 {
-  margin-bottom: 2rem;
+  font-size: 2.2rem;
   font-weight: 700;
   line-height: 4rem;
   --tw-text-opacity: 1;
@@ -740,7 +739,7 @@ section {
 
 @media (min-width: 57.6rem) {
   .headings--h2 {
-    margin-bottom: 0px;
+    font-size: 2.6rem;
   }
 }
 
@@ -764,7 +763,7 @@ section {
 
 .headings__left--h2::before {
   position: absolute;
-  bottom: 50%;
+  top: 50%;
   left: 0px;
   height: .2rem;
   width: 1.6rem;
@@ -789,49 +788,6 @@ section {
 
 @media (orientation: landscape) {
   .headings__left--h2 {
-    line-height: 6.6rem;
-  }
-}
-
-.headings__right--h2 {
-  position: relative;
-  margin-bottom: 2rem;
-  padding-right: 2.6rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 4rem;
-  letter-spacing: .75rem;
-  --tw-text-opacity: 1;
-  color: rgb(56 75 82 / var(--tw-text-opacity));
-}
-
-.headings__right--h2::after {
-  position: absolute;
-  bottom: 50%;
-  right: 0px;
-  height: .2rem;
-  width: 1.6rem;
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 174 205 / var(--tw-bg-opacity));
-  --tw-content: '';
-  content: var(--tw-content);
-}
-
-.dark .headings__right--h2 {
-  --tw-text-opacity: 1;
-  color: rgb(249 249 249 / var(--tw-text-opacity));
-}
-
-@media (min-width: 57.6rem) {
-  .headings__right--h2 {
-    margin-bottom: 0px;
-  }
-}
-
-@media (orientation: landscape) {
-  .headings__right--h2 {
     line-height: 6.6rem;
   }
 }
@@ -945,6 +901,11 @@ h4 {
   margin: auto;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -986,12 +947,20 @@ h4 {
   margin-bottom: 1.25rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -1083,6 +1052,14 @@ h4 {
   height: 5rem;
 }
 
+.h-\[200\%\] {
+  height: 200%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -1090,6 +1067,10 @@ h4 {
 .min-h-fit {
   min-height: -moz-fit-content;
   min-height: fit-content;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-full {
@@ -1171,6 +1152,10 @@ h4 {
 
 .w-\[8\.7rem\] {
   width: 8.7rem;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-\[120rem\] {
@@ -1641,12 +1626,12 @@ h4 {
   font-size: 1.2rem;
 }
 
-.text-lg {
-  font-size: 2.6rem;
-}
-
 .text-xxs {
   font-size: 1rem;
+}
+
+.text-lg {
+  font-size: 2.6rem;
 }
 
 .text-base {
@@ -1667,6 +1652,18 @@ h4 {
 
 .text-\[2rem\] {
   font-size: 2rem;
+}
+
+.text-\[\.5rem\] {
+  font-size: .5rem;
+}
+
+.text-\[\.10rem\] {
+  font-size: .10rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
 }
 
 .font-bold {
@@ -2360,6 +2357,10 @@ main {
 
   .tablet\:text-md {
     font-size: 2.2rem;
+  }
+
+  .tablet\:text-xs {
+    font-size: 1.2rem;
   }
 
   .tablet\:leading-lg {
